--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Why is the Earth Flat?
+title: Am I just proof of the infinite monkey theorem?
 description: Asking the important questions since 1998
